add rote for search, add a form to remove the elements in colunn faltantes and change the state incompleto to com completo when find in web
